fix: reduce gap bettween blocks in mobile menu

--- a/css/custom.css
+++ b/css/custom.css
@@ -373,7 +373,7 @@
 	}
 
 	.m-nav-keep {
-		gap: 60rem;
+		gap: 10rem;
 	}
 
 	.splide.no-pc .splide__list.search-grid {
